# encoding: utf-8
Editra
Author: Cody Precord
Copyright: (c) Cody Precord 2005-2010
License: wxWindows

Change Log:

#-----------------------------------------------------------------------------#
Changes since last release:

VERSION 0.5.xx
DATE xx/xx/2010
38th Alpha Release

NEWS:

NEW: [features/enhancements]
+Improved consistency of Python autocompletion to provide results under more
conditions.
+Show call tips on mouse over when available. 
+When in DEBUG mode trace statements are dumped to a log file in the systems
temp directory and are kept for up to seven days.

LIBRARY:
+Add callback interface for mouse dwell events in buffer

BUG FIXES:
+Fix issue with tab activation after tabs had been reorganized via user
drag and drop.
+Fix issue where using pane navigator would result in all event handlers being
disconnected until main window received an deactivation followed by another
activation event.
+Fix bug in reporting file errors under certain use cases.
+Fix incorrect highlighting for some css2 keywords.
+Don't crash when bitmap resource for tab navigator fails to load correctly.
+Fix issue where some UpdateUI events where not getting handled in modal dialogs.
+Fix inconsistency that could lead to an un-handled exception when switching between
different saved perspectives.
+Fix crash caused by thread safety issue that could occur when updater fails 
to get version info from the network.
+Fix bug where editor area would be readonly after a failed file load that
required the user to select the proper encoding.

#-----------------------------------------------------------------------------#

VERSION 0.5.86
DATE 10/10/2010
37th Alpha Release

NEWS:
This release includes some important Unicode and file loading issues as well
as some new features. See the included change summary below for more details
on what has changed for this release.

NEW: [features/enhancements]
+Add Search in Current Directory option to Find/Replace Dialog